--- a/app/(root)/globals.css
+++ b/app/(root)/globals.css
@@ -4,33 +4,54 @@
 
 @layer base {
   h1 {
-    @apply text-4xl;
+    @apply text-4xl md:text-5xl;
     @apply font-bold;
   }
 
   h2 {
-    @apply text-3xl;
+    @apply text-3xl md:text-4xl;
     @apply font-bold;
   }
 
   h3 {
-    @apply text-2xl;
+    @apply text-2xl md:text-3xl;
     @apply font-bold;
   }
 
   h4 {
-    @apply text-xl;
+    @apply text-xl md:text-2xl;
     @apply font-semibold;
   }
 
   h5 {
-    @apply text-lg;
+    @apply text-lg md:text-xl;
     @apply font-semibold;
   }
 
   h6 {
-    @apply text-sm;
+    @apply text-sm md:text-lg;
     @apply font-semibold;
+  }
+
+  @media (max-width: 640px) {
+    h1 {
+      @apply text-3xl;
+    }
+    h2 {
+      @apply text-2xl;
+    }
+    h3 {
+      @apply text-xl;
+    }
+    h4 {
+      @apply text-lg;
+    }
+    h5 {
+      @apply text-base;
+    }
+    h6 {
+      @apply text-sm;
+    }
   }
 }
 
