--- a/app/(root)/globals.css
+++ b/app/(root)/globals.css
@@ -4,68 +4,86 @@
 
 @layer base {
   h1 {
-    @apply text-4xl md:text-5xl;
-    @apply font-bold;
+    @apply text-5xl md:text-6xl lg:text-7xl font-bold;
   }
 
   h2 {
-    @apply text-3xl md:text-4xl;
-    @apply font-bold;
+    @apply text-4xl md:text-5xl lg:text-6xl font-bold;
   }
 
   h3 {
-    @apply text-2xl md:text-3xl;
-    @apply font-bold;
+    @apply text-3xl md:text-4xl lg:text-5xl font-bold;
   }
 
   h4 {
-    @apply text-xl md:text-2xl;
-    @apply font-semibold;
+    @apply text-2xl md:text-3xl lg:text-4xl font-semibold;
   }
 
   h5 {
-    @apply text-lg md:text-xl;
-    @apply font-semibold;
+    @apply text-xl md:text-2xl lg:text-3xl font-semibold;
   }
 
   h6 {
-    @apply text-sm md:text-lg;
-    @apply font-semibold;
+    @apply text-lg md:text-xl lg:text-2xl font-semibold;
+  }
+
+  p {
+    @apply text-base md:text-lg lg:text-xl leading-relaxed;
   }
 
   @media (max-width: 640px) {
     h1 {
       @apply text-3xl;
     }
+
     h2 {
       @apply text-2xl;
     }
+
     h3 {
       @apply text-xl;
     }
+
     h4 {
       @apply text-lg;
     }
+
     h5 {
       @apply text-base;
     }
+
     h6 {
       @apply text-sm;
+    }
+
+    p {
+      @apply text-sm leading-snug;
     }
   }
 }
 
 @layer utilities {
   .overlay-mask {
-    mask-image: linear-gradient(0deg, rgb(255 255 255 / 100%) 0%, rgb(255 255 255 / 0%) 40%);
+    mask-image: linear-gradient(0deg,
+        rgb(255 255 255 / 100%) 0%,
+        rgb(255 255 255 / 0%) 40%);
+  }
+
+  .responsive-container {
+    @apply w-full max-w-screen-lg mx-auto px-4 sm:px-6 lg:px-8;
+  }
+
+  .center-content {
+    @apply flex items-center justify-center text-center;
   }
 }
 
 html,
 body {
   overscroll-behavior: none;
+  @apply bg-gray-900 text-white;
 }
 
 body {
-  overflow-y: hidden;
+  overflow-y: auto;
 }
